# cw_5

./: .gitignore  README.md  config.py  pyproject.toml  settings.py
data/: employers.json  queries.sql  vacancies.json
db/: db_creator.py  db_manager.py
parser/: hh_parser.py  vacancy_parser.py
src/: main.py  utils.py
